welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:3: error: not found: value int
  int l = nums.lenght
  ^arrayCount9:4: error: not found: value l
  if(l<4){
     ^arrayCount9:5: error: not found: value l
    l=4
    ^arrayCount9:7: error: not found: value l
  for (i <- 0 to l){
                 ^arrayCount9:9: error: type mismatch;
 found   : Boolean(true)
 required: Int
      return true
             ^arrayCount9:13: error: type mismatch;
 found   : Boolean(false)
 required: Int
  return false
         ^